syntax = "proto3";

package pb;

option go_package = "./";

message BlockOffset{
  bytes key = 1;
  uint32 offset = 2;
  uint32 len = 3;
}

message TableIndex{
  repeated BlockOffset offsets = 1;
  bytes  bloomFilter = 2;
  uint64 maxVersion = 3;
  uint32 keyCount = 4;
  uint32 staleDataSize = 5;
}