syntax = "proto3";
// 定义包名
package proto;

// 可以定义多个服务，每个服务内可以定义多个接口
service OctopusDB {
  // 定义接口 (结构体可以复用)
  // 方法 (请求消息结构体) returns (返回消息结构体) {}
  rpc Get (Req) returns (Res) {}
}

// 定义 Req 消息结构
message Req {
  // 类型 字段 = 标识号
  string jsonStr = 1;
}

// 定义 Res 消息结构
message Res {
  string backJson = 1;
}
// PS：jsonStr和backJson只是随手写的名字，并没有用json